--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
   <div class="form-container">
     <h2>Staff Personal Details Form</h2>
-    <form>
+    <form action="https://sheetdb.io/api/v1/g9mmp9e1hvahb" method="POST">
       <label>Name:<input type="text" name="name" required></label>
       <label>Father/Husband/Guardian Name:<input type="text" name="guardian_name" required></label>
       <label>Date of Birth:<input type="date" name="dob" required></label>
